# skynet-lib

./: .gitignore  VERSION  pyproject.toml  renovate.json
.github/workflows/: airflow-image.yml  publish.yml
docker/airflow/: Dockerfile  requirements.txt
