[project]
name = "skynet-lib-workspace"
version = "2026.4.2"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

# Resolve inter-package deps from the local workspace (not PyPI) during
# uv sync. Required so that `skynet-embedding`/`skynet-matrix` (which list
# `skynet-core>=2026.4.2` in [project.dependencies]) find it inside this
# repo. Without these sources uv tries to fetch skynet-core from PyPI and
# fails since the packages live only on the internal Nexus.
[tool.uv.sources]
skynet-core = { workspace = true }
skynet-qdrant = { workspace = true }
skynet-embedding = { workspace = true }
skynet-matrix = { workspace = true }
skynet-scoring = { workspace = true }
skynet-graph = { workspace = true }
skynet-retrieval = { workspace = true }
skynet-consolidation = { workspace = true }
skynet-vault = { workspace = true }
skynet-postgres = { workspace = true }
skynet-mcp = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "strict"
# Use importlib importmode so that identically-named test modules
# (e.g. test_engine.py in multiple packages) don't collide under a
# workspace-wide pytest run. Combined with no ``tests/__init__.py``
# markers this keeps each test file at a unique rootdir-relative path.
addopts = "--import-mode=importlib"
